Fixed spacing issue on Contact Page

--- a/ContactUs/contact.css
+++ b/ContactUs/contact.css
@@ -326,6 +326,7 @@ form {
     top: 600px;
     margin-left: 5%;
     margin-top: 1%;
+    margin-bottom: 2%;
 
   }
 
